--- a/Configirations/config.properties
+++ b/Configirations/config.properties
@@ -1,2 +1,10 @@
-domainurl=https://reqres.in
-serviceurl=/api/users?page=2
+#domainurl=https://reqres.in
+#serviceurl=/api/users?page=2
+
+
+######################
+
+#postrequest uri details
+
+postdomainurl=https://gorest.co.in
+postserviceurl=/public-api/users
