--- a/Configirations/config.properties
+++ b/Configirations/config.properties
@@ -6,5 +6,13 @@
 
 #postrequest uri details
 
-postdomainurl=https://gorest.co.in
-postserviceurl=/public-api/users
+#postdomainurl=https://gorest.co.in
+#postserviceurl=/public-api/users
+
+
+#########################
+
+postdomainurl=https://reqres.in/
+postserviceurl=api/register
+
+
