--- a/pom.xml
+++ b/pom.xml
@@ -53,18 +53,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 	<dependencies>
 
 		<dependency>
@@ -91,6 +79,25 @@
 			<artifactId>testng</artifactId>
 			<version>7.0.0</version>
 			<scope>compile</scope>
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.11.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.11.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.11.1</version>
 		</dependency>
 
 
